--- a/src/app/configurable-appliance/components/config-app/adaptive-learning/add-udise-code/add-udise-code.component.html
+++ b/src/app/configurable-appliance/components/config-app/adaptive-learning/add-udise-code/add-udise-code.component.html
@@ -7,7 +7,7 @@
           [closable]="true"
         ></p-messages>
         <div class="field">
-          <label for="name">{{ "School Name" }} <span class="required">*</span></label>
+          <label for="name">{{ "School Name" }}</label>
           <input
             type="text"
             name="school_name"
